# circt

./: .arcconfig  .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  20states-liveness.mlir  20states-liveness.smt  20states-safety.smt  2mm.mlir  AGENTS.md  CMakeLists.txt  CODEOWNERS  CODEOWNERS.yml  CODE_OWNERS.md  DESIGN.md  HW_PROBE_PROPOSAL_README.md  PLAN_SUMMARY.md  README.md  TODO.md  broken-deseq-02v4.mlir  broken.mlir  broken2.mlir  bv-err-10states-smt.mlir  bv-err-10states.smt  bv-lin-10states-smt.mlir  bv-lin-10states.smt  compile.sh  contracts.fir  contracts.mlir  conv_memref_lowering.mlir  debug.mlir  debug.sv  debug1.sv  debug2.mlir  debug2.sv  dump.txt  equiv_yosys.sh  example.smt  (+55 more)
cmake/modules/: AddCIRCT.cmake  AddSPT.cmake  CIRCTConfig.cmake.in  CMakeLists.txt  ExtendPath.cmake  GenVersionFile.cmake  SlangCompilerOptions.cmake
examples/circt-standalone/: CMakeLists.txt  README.md
frontends/PyCDE/: .gitignore  AGENTS.md  CMakeLists.txt  pyproject.toml  setup.py
frontends/PyRTG/: .gitignore  CMakeLists.txt  pyproject.toml
lib/: CMakeLists.txt
lib/Analysis/: BitwidthAnalysis.cpp  CMakeLists.txt  ControlFlowLoopAnalysis.cpp  DebugAnalysis.cpp  DebugInfo.cpp  DependenceAnalysis.cpp  FIRRTLInstanceInfo.cpp  OpCountAnalysis.cpp  OpDepthAnalysis.cpp  PassDetail.h  SchedulingAnalysis.cpp  SignalTracingAnalysis.cpp  TestPasses.cpp
lib/Bindings/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Debug/: CMakeLists.txt  HWDebug.cpp
lib/Dialect/: CMakeLists.txt
lib/EmitVerilog/: CMakeLists.txt  EmitVerilog.cpp  ReservedWords.def
lib/FIRParser/: CMakeLists.txt  FIRLexer.cpp  FIRLexer.h  FIRParser.cpp  FIRTokenKinds.def
lib/FSMVerification/: %ex.mlir  FSM_bison.yy  complex_example.dot
lib/Firtool/: CMakeLists.txt  Firtool.cpp
lib/LogicalEquivalence/: CMakeLists.txt  Circuit.cpp  LogicExporter.cpp  Solver.cpp
lib/Query/: CMakeLists.txt  Query.cpp
lib/Reduce/: CMakeLists.txt  GenericReductions.cpp  Reduction.cpp  ReductionUtils.cpp  Tester.cpp
lib/Scheduling/: ASAPScheduler.cpp  CMakeLists.txt  CPSATSchedulers.cpp  ChainingSupport.cpp  ComponentLibrary.cpp  Interfaces.cpp  LPSchedulers.cpp  PresburgerSchedulers.cpp  Problems.cpp  Scheduler.cpp  SimplexScheduler.cpp  SimplexSchedulers.cpp  TestPasses.cpp  Utilities.cpp
lib/Simulator/: CMakeLists.txt  Engine.cpp  State.cpp  signals-runtime-wrappers.cpp
lib/Support/: APInt.cpp  Backedge.cpp  BackedgeBuilder.cpp  CMakeLists.txt  Compression.cpp  ConversionPatterns.cpp  CustomDirectiveImpl.cpp  Debug.cpp  FVInt.cpp  FieldRef.cpp  HWUtils.cpp  InstanceGraph.cpp  JSON.cpp  LoopRerolling.cpp  LoweringOptions.cpp  NPNClass.cpp  Naming.cpp  ParsingUtils.cpp  Passes.cpp  Path.cpp  PortConverter.cpp  PrettyPrinter.cpp  PrettyPrinterBuilder.cpp  PrettyPrinterHelpers.cpp  ProceduralRegionTrait.cpp  RTLBuilder.cpp  SATSolver.cpp  SVAttributes.cpp  String.cpp  TargetOptions.cpp  TestPasses.cpp  TruthTable.cpp  VCD.cpp  VCDTokenKinds.def  ValueMapper.cpp  Version.cpp.in
lib/Synthesis/: CMakeLists.txt  CutRewriter.cpp  SynthesisPipeline.cpp
lib/Tools/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  CSE.cpp  CellIFT.cpp  CombStrengthReduction.cpp  ConvertIndexToUInt.cpp  EggSynthesis.cpp  EmitOpCount.cpp  EnsureDivisionIsSpeculatable.cpp  Feedthrough.cpp  FlattenMemRefs.cpp  GenStateStruct.cpp  HierarchicalRunner.cpp  IndexSwitchToIf.cpp  InsertMergeBlocks.cpp  MapArithToComb.cpp  MaximizeSSA.cpp  MemoryBanking.cpp  PassDetail.h  PrintOpCount.cpp  PrintOperationCounts.cpp  SimpleCanonicalizer.cpp  StripDebugInfoWithPred.cpp
lib/Translation/: CMakeLists.txt
lib/Verification/: CMakeLists.txt  Circuit.cpp  LogicExporter.cpp  Solver.cpp
test/: CMakeLists.txt  equiv_yosys.sh  lit.cfg.py  lit.site.cfg.py.in
test/Analysis/: .#dependence-analysis.mlir  cf-loop-analysis.mlir  comb-int-range-analysis.mlir  debug-analysis.mlir  debug-info-aggregate-enum.mlir  debug-info.mlir  dependence-analysis.mlir  firrtl-gated-clock-conversion.mlir  firrtl-test-instance-info.mlir  infer-top-level.mlir  lit.local.cfg  op-count-analysis.mlir  scheduling-analysis.mlir  signal-tracing-analysis.mlir
test/CAPI/: CMakeLists.txt  aig.c  arc.c  firrtl.c  firtool.c  ir.c  ltl.c  om.c  rtg-pipelines.c  rtg.c  rtgtest.c  smtlib.c  support.c  sv.c  synth.c
test/Conversion/: tmp.mlir
test/EmitVerilog/: firrtl-dialect.mlir  rtl-dialect.mlir  sv-dialect.mlir  sv-interfaces.mlir  verilog-basic.fir  verilog-errors.fir  verilog-errors.mlir  verilog-rtl-dialect.mlir  verilog-weird.mlir
test/ExportVerilog/: disallow-local-vars.mlir  firrtl-dialect.mlir  hw-dialect.mlir  hw-legalize-names.mlir  hw-typedecls-errors.mlir  hw-typedecls.mlir  line-length.mlir  load-dialect.mlir  name-legalize.mlir  output-directory.mlir  output-file.mlir  rtl-dialect.mlir  rtl-typedecls-errors.mlir  rtl-typedecls.mlir  sv-always-wire.mlir  sv-alwayscomb.mlir  sv-alwaysff.mlir  sv-dialect.mlir  sv-interfaces.mlir  sv-types.mlir  sv-verifLabels.mlir  verilog-basic.fir  verilog-basic.mlir  verilog-errors.mlir  verilog-weird.mlir
test/FIRParser/: basic.fir  errors.fir  locations.fir
test/HIR/: add.mlir  bus.mlir  convolution.mlir  counter.mlir  def.mlir  dummy.mlir  err_add.mlir  fifo.mlir  histogram.mlir  interface.mlir  loop-unroll.mlir  loop_fuse.mlir  mac.mlir  matmul.mlir  matmul2.mlir  nop.mlir  old_matmul.mlir  ops.mlir  stencil_1d.mlir  tb_add.sv  tb_fifo.sv  tb_histogram.sv  tb_matmul.sv  tb_stencil_1d.sv  transpose.mlir
test/Query/: simple.mlir
test/Scheduling/: CMakeLists.txt  TestPasses.cpp  asap-errors.mlir  chaining-cyclic-problem-errors.mlir  chaining-cyclic-problems.mlir  chaining-problem-errors.mlir  chaining-problems.mlir  chaining-simplex-errors.mlir  component-library.mlir  cyclic-problem-errors.mlir  cyclic-problems.mlir  cyclic-simplex-errors.mlir  modulo-problem-errors.mlir  modulo-problems.mlir  modulo-simplex-errors.mlir  problem-errors.mlir  problems.mlir  schedulable-op-interface.mlir  shared-operators-problems.mlir  (+8 more)
tools/: CMakeLists.txt
(+8298 files in other folders)
